--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,25 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+# codekit
+*.codekit
+config.codekit
+.codekit-cache/
+
+# grunt
+node_modules/
+package.json
+Gruntfile.js
+bower.json
+.tmp/
+bower_components/
+.editorconfig
+.bowerrc
+.jshintrc
+.travis.yml
+node_modules
+dist
+.tmp
+.sass-cache
+bower_components
